# bedrock-experiments

./: .gitignore  README.md  pyproject.toml
cesium-martini/: index.html  main.ts  mapterhorn.worker.ts  package-lock.json  package.json  vite.config.ts
cesiumjs-no-token/: README.md  index.html  script.js
channels/grasshopper/: transform_to_origin.gh
channels/notebooks/: voxel_surface_meshes.py
channels/paraview/: fluvial_channels.pvsm
fluvial_channels/paraview/: paraview_state.py
gi-schemas/ags/: README.md  ags4_data_dict.json  ags4_data_dict_json_from_ags_file.py  ags4_pdf_data_dict.json  ags_data_dict_json_from_pdf.py
gi-schemas/ags/ags3/: pdf_data_dict_ags3.json
gi-schemas/ags/ags4/: abbr_categories.json  ags4_data_dict_json_from_ags_file.py  pdf_data_dict_ags4.json  types_ags4.json  units_ags4.csv
hk_kaitak/: transform_revit_ecs_to_epsg-p2326-v5738.gh
mapterhorn/: index.html
nl_amsterdam/: README.md  index.html  script.js
nl_amsterdam/cesiumjs/: script.js
nl_amsterdam/data/01_raw/: site.gpkg
nl_amsterdam/data/01_raw/gi/: CPT000000037783.xml  CPT000000060419.xml  (+82 more)
nl_amsterdam/data/03_primary/: context.3dm
nl_amsterdam/data/04_feature/: cpt_interpreted_rdnap_epsg7415.geojson  cpt_rdnap_epsg7415.geojson  site_plot_rdnap_epsg7415.geojson
nl_amsterdam/gis/: overhoeks.qgz
nl_amsterdam/grasshopper/: geojson_to_rhino_geom.gh  geojson_to_rhino_geom.py
nl_amsterdam/notebooks/: cpt_soil_type_color_mapping.py
nl_den_haag_ocf_safari/: Big3.3dm
speckle/: explore-appdata-speckle-data-db.py
uk_east_west_rail/: uk_east_west_rail.py
