[project]
name = "bedrock-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "mapclassify>=2.10.0",
    "marimo[recommended]>=0.17.2",
    "matplotlib>=3.10.7",
    "polars>=1.34.0",
    "pyvista>=0.46.3",
]
